--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react-dom": "^18.0.0",
     "react-icons": "^4.4.0",
     "react-scripts": "5.0.1",
+    "react-scroll-motion": "^0.3.0",
     "sass": "^1.52.2",
+    "swiper": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
